--- a/charts/matrix-stack/templates/postgres/configmap.yaml
+++ b/charts/matrix-stack/templates/postgres/configmap.yaml
@@ -21,6 +21,7 @@ data:
         include "element-io.ess-library.init-secret-path" (
       dict "root" $ "context" (
         dict "secretProperty" .adminPassword
+              "secretPath" ".postgres.adminPassword"
               "initSecretKey" "POSTGRES_ADMIN_PASSWORD"
               "defaultSecretName" (printf "%s-postgres" $.Release.Name)
               "defaultSecretKey" "ADMIN_PASSWORD"
@@ -33,6 +34,7 @@ data:
   include "element-io.ess-library.init-secret-path" (
     dict "root" $ "context" (
       dict "secretProperty" $prop
+            "secretPath" (printf ".postgres.essPasswords.%s" $key)
             "initSecretKey" (printf "POSTGRES_%s_PASSWORD" ($key | upper))
             "defaultSecretName" (printf "%s-postgres" $.Release.Name)
             "defaultSecretKey" (printf "ESS_PASSWORD_%s" ($key | upper))
