--- a/.github/workflows/licensing.yml
+++ b/.github/workflows/licensing.yml
@@ -17,27 +17,14 @@ permissions:
 
 jobs:
   reuse-compliance-check:
-    runs-on: cpu-s
-    container:
-      image: ghcr.io/${{ github.repository }}/ci-runner
-      credentials:
-        username: ${{ github.actor }}
-        password: ${{ secrets.GITHUB_TOKEN }}
+    runs-on: ubuntu-latest
     steps:
     - name: Checkout
       uses: actions/checkout@v4
 
-    - name: Define a cache for the virtual environment based on the dependencies lock file
-      uses: actions/cache@v4
+    - uses: matrix-org/setup-python-poetry@v1
       with:
-        path: ./.venv
-        key: venv-${{ hashFiles('poetry.lock') }}
-
-    - name: Install venv
-      run: |
-        poetry env info
-        poetry install
-        echo "$(poetry env info -p)/bin" >> "${GITHUB_PATH}"
+        python-version: "3.x"
 
     - name: reuse-lint
       run: |
