--- a/.github/workflows/matrix-tools.yml
+++ b/.github/workflows/matrix-tools.yml
@@ -5,7 +5,7 @@
 name: Build Docker Images
 
 on:
-  pull_request_target:
+  pull_request:
   workflow_dispatch:
   push:
     branches:
@@ -23,12 +23,7 @@ permissions:
 
 jobs:
   tests:
-    runs-on: memory-m
-    container:
-      image: ghcr.io/${{ github.repository }}/ci-runner
-      credentials:
-        username: ${{ github.actor }}
-        password: ${{ secrets.GITHUB_TOKEN }}
+    runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
       with:
