--- a/.github/workflows/releasing.yml
+++ b/.github/workflows/releasing.yml
@@ -17,34 +17,16 @@ jobs:
     permissions:
       contents: read
       packages: write
-    runs-on: cpu-s
-    container:
-      image: ghcr.io/${{ github.repository }}/ci-runner
-      credentials:
-        username: ${{ github.actor }}
-        password: ${{ secrets.GITHUB_TOKEN }}
+    runs-on: ubuntu-latest
     steps:
     - name: Checkout
       uses: actions/checkout@v4
 
-    - name: Define a cache for the virtual environment based on the dependencies lock file
-      uses: actions/cache@v4
+    - uses: matrix-org/setup-python-poetry@v1
       with:
-        path: ./.venv
-        key: venv-${{ hashFiles('poetry.lock') }}
+        python-version: "3.x"
 
-    - name: Install venv
-      run: |
-        # helm/chart-testing-action sets up its own venv that we have no control over
-        # We don't want to use it for this
-        unset VIRTUAL_ENV
-        # Or future actions
-        poetry_venv=$(poetry env info -p)
-        sed -i "s|^VIRTUAL_ENV=.*|VIRTUAL_ENV=$poetry_venv|" "${GITHUB_ENV}"
-
-        poetry env info
-        poetry install -n
-        echo "$(poetry env info -p)/bin" >> "${GITHUB_PATH}"
+    - uses: azure/setup-helm@v4.2.0
 
     - name: Set version
       run: |
@@ -106,12 +88,7 @@ jobs:
       pull-requests: write
     needs:
     - helm-package
-    runs-on: cpu-s
-    container:
-      image: ghcr.io/${{ github.repository }}/ci-runner
-      credentials:
-        username: ${{ github.actor }}
-        password: ${{ secrets.GITHUB_TOKEN }}
+    runs-on: ubuntu-latest
     steps:
     - name: Checkout
       uses: actions/checkout@v4
