fix matrix tools actions

--- a/.github/workflows/matrix-tools.yml
+++ b/.github/workflows/matrix-tools.yml
@@ -29,13 +29,17 @@ jobs:
       with:
         ref: ${{ github.event.pull_request.head.sha }}
 
-    - name: Prepare go path
-      run: echo "/usr/local/go/bin" >> "${GITHUB_PATH}"
+    - uses: actions/setup-go@v5
+      with:
+        go-version: stable
 
-    - name: Lint with golangci-lint
-      run: |
-        cd matrix-tools
-        golangci-lint run ./... -v --show-stats --no-config --modules-download-mode readonly --timeout 5m
+    - uses: golangci/golangci-lint-action@v6
+      with:
+        args: -v --show-stats --no-config --modules-download-mode readonly --timeout 5m
+
+    - uses: GoTestTools/gotestfmt-action@v2
+      with:
+        token: ${{ secrets.GITHUB_TOKEN }}
 
     - name: Run tests
       run: cd matrix-tools && go test -v  -json ./... 2>&1 | gotestfmt
@@ -45,7 +49,7 @@ jobs:
     name: Build matrix-tools container image
     needs:
     - tests
-    runs-on: dind-m
+    runs-on: ubuntu-latest
     steps:
       - name: Inspect Builder
         run: docker buildx inspect
