--- a/.github/workflows/changelog_check.yml
+++ b/.github/workflows/changelog_check.yml
@@ -15,9 +15,10 @@ jobs:
           fetch-depth: 0
           ref: ${{github.event.pull_request.head.sha}}
 
-      - uses: matrix-org/setup-python-poetry@v1
+      - uses: matrix-org/setup-python-poetry
         with:
           python-version: "3.x"
+          poetry-version: "1.8.5"
 
       - name: Run towncrier
         run: |
