--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -27,8 +27,9 @@ jobs:
       with:
         ref: ${{ github.event.pull_request.head.sha }}
 
-    - uses: matrix-org/setup-python-poetry@v1
+    - uses: matrix-org/setup-python-poetry
       with:
+        poetry-version: "1.8.5"
         python-version: "3.x"
 
     - uses: engineerd/setup-kind@v0.6.2
