element-web: add a comment to justify the root directory for paths consistency

--- a/charts/matrix-stack/templates/element-web/nginx_configmap.yaml
+++ b/charts/matrix-stack/templates/element-web/nginx_configmap.yaml
@@ -59,6 +59,7 @@ data:
             add_header X-Robots-Tag "noindex, nofollow, noarchive, noimageindex";
 
             location / {
+                # Serving /app/config.json
                 root   /usr/share/nginx/html;
                 index  index.html index.htm;
 
