--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -24,7 +24,7 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v4
 
-    - uses: matrix-org/setup-python-poetry
+    - uses: matrix-org/setup-python-poetry@v1
       with:
         python-version: "3.x"
         poetry-version: "1.8.5"
@@ -74,7 +74,7 @@ jobs:
         poetry_venv=$(poetry env info -p)
         sed -i "s|^VIRTUAL_ENV=.*|VIRTUAL_ENV=$poetry_venv|" "${GITHUB_ENV}"
 
-    - uses: matrix-org/setup-python-poetry
+    - uses: matrix-org/setup-python-poetry@v1
       with:
         poetry-version: "1.8.5"
         python-version: "3.x"
