--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -27,7 +27,7 @@ jobs:
       with:
         ref: ${{ github.event.pull_request.head.sha }}
 
-    - uses: matrix-org/setup-python-poetry
+    - uses: matrix-org/setup-python-poetry@v1
       with:
         poetry-version: "1.8.5"
         python-version: "3.x"
