--- a/.github/workflows/licensing.yml
+++ b/.github/workflows/licensing.yml
@@ -27,6 +27,10 @@ jobs:
         poetry-version: "1.8.5"
         python-version: "3.x"
 
+    - name: Load poetry path
+      run: |
+        echo "$(poetry env info -p)/bin" >> "${GITHUB_PATH}"
+
     - name: reuse-lint
       run: |
         git config --global --add safe.directory "$GITHUB_WORKSPACE"
