--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -40,6 +40,7 @@ jobs:
       with:
         version: "v0.25.0"
         skipClusterCreation: "true"
+        skipClusterLogsExport: "true"
 
 
     - uses: azure/setup-helm@v4.2.0
