--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -39,6 +39,7 @@ jobs:
     - uses: engineerd/setup-kind@v0.6.2
       with:
         version: "v0.25.0"
+        name: "ess-helm"
         skipClusterCreation: "true"
         skipClusterLogsExport: "true"
 
