--- a/charts/matrix-stack/templates/synapse/synapse_statefulset.yaml
+++ b/charts/matrix-stack/templates/synapse/synapse_statefulset.yaml
@@ -157,13 +157,15 @@ We have an init container to render & merge the config for several reasons:
           {{- toYaml . | nindent 10 }}
 {{- end }}
         command:
-        - "bash"
-        - "-cex"
-        - >
-          [ -e "/usr/lib/`uname -m`-linux-gnu/libjemalloc.so.2" ] && export LD_PRELOAD="/usr/lib/`uname -m`-linux-gnu/libjemalloc.so.2";
-          python3 -m {{ include "element-io.synapse.process.app" (dict "root" $ "context" $processType) }} -c /conf/homeserver.yaml
-{{- with (include "element-io.synapse.env" (dict "root" $ "context" .)) }}
+        - "python3"
+        - "-m"
+        - {{ include "element-io.synapse.process.app" (dict "root" $ "context" $processType) }}
+        - "-c"
+        - /conf/homeserver.yaml
         env:
+        - name: LD_PRELOAD
+          value: libjemalloc.so.2
+{{- with (include "element-io.synapse.env" (dict "root" $ "context" .)) }}
           {{- . | nindent 10 }}
 {{- end }}
         ports:
