--- a/.github/workflows/matrix-tools.yml
+++ b/.github/workflows/matrix-tools.yml
@@ -1,8 +1,8 @@
-# Copyright 2024 New Vector Ltd
+# Copyright 2025 New Vector Ltd
 #
 # SPDX-License-Identifier: AGPL-3.0-only OR LicenseRef-Element-Commercial
 
-name: Build Docker Images
+name: Build matrix-tool Docker Images
 
 on:
   pull_request_target:
@@ -14,8 +14,7 @@ on:
     - 'matrix-tools-*'
 
 env:
-  DOCKER_REGISTRY: ghcr.io/${{ github.repository }}
-  BAKE_TARGET: matrix-tools
+  REGISTRY_IMAGE: ghcr.io/${{ github.repository }}/matrix-tools
 
 permissions:
   contents: read
@@ -55,54 +54,49 @@ jobs:
     - tests
     runs-on: ubuntu-latest
     steps:
-      - name: Inspect Builder
-        run: docker buildx inspect
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v3
 
-      - name: Checkout Repository
-        uses: actions/checkout@v4
+    - name: Checkout Repository
+      uses: actions/checkout@v4
 
-      - name: Login to GHCR
-        uses: docker/login-action@v3
-        with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+    - name: Login to GHCR
+      uses: docker/login-action@v3
+      with:
+        registry: ghcr.io
+        username: ${{ github.actor }}
+        password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Get Release Tag
-        if: github.ref_type == 'tag' # Only for GitHub releases
-        run: |
-          echo "Converting $GITHUB_REF to tags"
-          echo "VERSION=${GITHUB_REF#refs\/tags\/matrix-tools-}" >> $GITHUB_ENV
+    - name: Get Release Tag
+      if: github.ref_type == 'tag' # Only for GitHub releases
+      run: |
+        echo "Converting $GITHUB_REF to tags"
+        echo "VERSION=${GITHUB_REF#refs\/tags\/matrix-tools-}" >> $GITHUB_ENV
 
-      - name: Docker meta
-        id: meta
-        uses: docker/metadata-action@master
-        with:
-          images: |
-            ${{ env.DOCKER_REGISTRY }}/${{ env.BAKE_TARGET }}
-          flavor: |
-            latest=false
-          tags: |
-            type=raw,value=${{ env.VERSION }},enable=${{ github.ref_type == 'tag' }}
-            type=sha,prefix=sha-,format=short
+    - name: Docker meta
+      id: meta
+      uses: docker/metadata-action@v5
+      with:
+        images: |
+          ${{ env.REGISTRY_IMAGE }}
+        flavor: |
+          latest=false
+        tags: |
+          type=raw,value=${{ env.VERSION }},enable=${{ github.ref_type == 'tag' }}
+          type=sha,prefix=sha-,format=short
+        labels: |
+          org.opencontainers.image.licenses=AGPL-3.0-only OR LicenseRef-Element-Commercial
+        annotations: |
+          org.opencontainers.image.licenses=AGPL-3.0-only OR LicenseRef-Element-Commercial
 
-      - name: Build and Push Image
-        id: build_image
-        uses: docker/bake-action@v4.1.0
-        with:
-          # Only for tags
-          push: "${{ github.ref_type == 'tag' }}"
-          files: |
-            docker-bake.hcl
-            ${{ steps.meta.outputs.bake-file }}
-          targets: |
-            ${{ env.BAKE_TARGET }}
-          # Override the docker bake target with Bakefile options specific to
-          # releasing the docker images.
-          #
-          # All options: https://docs.docker.com/reference/cli/docker/buildx/bake/#set
-          # Option descriptions: https://docs.docker.com/build/bake/reference/
-          #
-          # note: "base" is the target called "base".
-          set: |
-            base.output=type=image
+    - name: Build and Push Image
+      uses: docker/bake-action@v6
+      with:
+        push: "${{ github.ref_type == 'tag' }}"
+        files: |
+          docker-bake.hcl
+          cwd://${{ steps.meta.outputs.bake-file }}
+        targets: matrix-tools
+        set: |
+          *.output=type=image
+          *.platform=linux/amd64,linux/arm64
