--- a/charts/matrix-stack/ci/pytest-matrix-authentication-service-values.yaml
+++ b/charts/matrix-stack/ci/pytest-matrix-authentication-service-values.yaml
@@ -2,7 +2,7 @@
 #
 # SPDX-License-Identifier: AGPL-3.0-only OR LicenseRef-Element-Commercial
 #
-# source_fragments: synapse-minimal.yaml synapse-pytest-extras.yaml matrix-authentication-service-minimal.yaml matrix-authentication-service-pytest-extras.yaml init-secrets-minimal.yaml init-secrets-pytest-extras.yaml postgres-minimal.yaml
+# source_fragments: synapse-minimal.yaml synapse-pytest-base-extras.yaml matrix-authentication-service-minimal.yaml matrix-authentication-service-pytest-extras.yaml init-secrets-minimal.yaml init-secrets-pytest-extras.yaml postgres-minimal.yaml
 # DO NOT EDIT DIRECTLY. Edit the fragment files to add / modify / remove values
 
 elementWeb:
@@ -26,27 +26,11 @@ postgres:
   enabled: true
 serverName: ess.localhost
 synapse:
-  additional:
-    00-userconfig.yaml:
-      config: |
-        push:
-          jitter_dalay: 10
-    01-other-user-config.yaml:
-      configSecret: "{{ $.Release.Name }}-synapse-secrets"
-      configSecretKey: "01-other-user-config.yaml"
-  extraEnv:
-    - name: DEBUG_RENDERING
-      value: "1"
   ingress:
     host: synapse.{{ $.Values.serverName }}
     tlsSecret: "{{ $.Release.Name }}-synapse-web-tls"
   redis:
     annotations:
       has-no-service-monitor: "true"
-  workers:
-    media-repository:
-      enabled: true
-    sliding-sync:
-      enabled: true
 wellKnownDelegation:
   enabled: false
