--- a/.github/workflows/releasing.yml
+++ b/.github/workflows/releasing.yml
@@ -21,6 +21,8 @@ jobs:
     steps:
     - name: Checkout
       uses: actions/checkout@v4
+      with:
+        ref: ${{ github.event.pull_request.head.sha }}
 
     - uses: matrix-org/setup-python-poetry@v1
       with:
@@ -97,6 +99,8 @@ jobs:
     steps:
     - name: Checkout
       uses: actions/checkout@v4
+      with:
+        ref: ${{ github.event.pull_request.head.sha }}
 
     - name: Grab packaged chart
       uses: actions/download-artifact@v4
