--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -22,7 +22,7 @@ jobs:
       with:
         ref: ${{ github.event.pull_request.head.sha }}
 
-    - uses: matrix-org/setup-python-poetry@v1
+    - uses: matrix-org/setup-python-poetry@gaelg/poetry-venv
       with:
         python-version: "3.x"
         poetry-version: "1.8.5"
@@ -69,7 +69,7 @@ jobs:
           echo 'Error: $ is used in a .tpl files, but helm passes the local context to the special variable $ in included templates.'; exit 1 
         } || echo "OK."
 
-    - uses: matrix-org/setup-python-poetry@v1
+    - uses: matrix-org/setup-python-poetry@gaelg/poetry-venv
       with:
         poetry-version: "1.8.5"
         python-version: "3.x"
