--- a/.github/workflows/releasing.yml
+++ b/.github/workflows/releasing.yml
@@ -4,7 +4,7 @@
 
 name: Helm Chart packaging and releasing
 on:
-  pull_request_target:
+  pull_request:
   push:
     branches:
     - main
@@ -24,7 +24,7 @@ jobs:
       with:
         ref: ${{ github.event.pull_request.head.sha }}
 
-    - uses: matrix-org/setup-python-poetry@v1
+    - uses: matrix-org/setup-python-poetry@gaelg/poetry-venv
       with:
         poetry-version: "1.8.5"
         python-version: "3.x"
