--- a/.github/workflows/artifact-hub.yml
+++ b/.github/workflows/artifact-hub.yml
@@ -2,7 +2,7 @@
 #
 # SPDX-License-Identifier: AGPL-3.0-only OR LicenseRef-Element-Commercial
 
-name: Licensing checks
+name: Artifact Hub Metadata
 
 on:
   pull_request_target:
