--- a/charts/matrix-stack/templates/matrix-authentication-service/ingress.yaml
+++ b/charts/matrix-stack/templates/matrix-authentication-service/ingress.yaml
@@ -15,7 +15,7 @@ metadata:
   name: {{ $.Release.Name }}-matrix-authentication-service
   namespace: {{ $.Release.Namespace }}
 spec:
-{{- include "element-io.ess-library.ingress.tlsSecret" (dict "root" $ "context" (dict "hosts" (list (required "matrixAuthenticationService.ingress.host is required" .ingress.host)) "tlsSecret" .ingress.tlsSecret)) | nindent 2 }}
+{{- include "element-io.ess-library.ingress.tlsSecret" (dict "root" $ "context" (dict "hosts" (list (required "matrixAuthenticationService.ingress.host is required" .ingress.host)) "tlsSecret" .ingress.tlsSecret "ingressName" "matrix-authentication-service")) | nindent 2 }}
 {{- include "element-io.ess-library.ingress.className" (dict "root" $ "context" .ingress.className) | nindent 2 }}
   rules:
   - host: {{ (tpl .ingress.host $) | quote }}
