--- a/charts/matrix-stack/templates/synapse/synapse_ingress.yaml
+++ b/charts/matrix-stack/templates/synapse/synapse_ingress.yaml
@@ -9,7 +9,7 @@ SPDX-License-Identifier: AGPL-3.0-only OR LicenseRef-Element-Commercial
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-{{- include "element-io.ess-library.ingress.annotations" (dict "root" $ "context" .ingress.annotations) | nindent 2 }}
+{{- include "element-io.ess-library.ingress.annotations" (dict "root" $ "context" .ingress) | nindent 2 }}
   labels:
     {{- include "element-io.synapse-ingress.labels" (dict "root" $ "context" $.Values.haproxy) | nindent 4 }}
   name: {{ $.Release.Name }}-synapse
