--- a/charts/matrix-stack/templates/synapse/synapse_statefulset.yaml
+++ b/charts/matrix-stack/templates/synapse/synapse_statefulset.yaml
@@ -162,9 +162,9 @@ We have an init container to render & merge the config for several reasons:
         - {{ include "element-io.synapse.process.app" (dict "root" $ "context" $processType) }}
         - "-c"
         - /conf/homeserver.yaml
-{{- with (include "element-io.synapse.env" (dict "root" $ "context" .)) }}
         env:
-          {{- . | nindent 10 }}
+          {{- include "element-io.synapse.pythonEnv" (dict "root" $ "context" .) | nindent 10 }}
+          {{- include "element-io.synapse.env" (dict "root" $ "context" .) | nindent 10 }}
 {{- end }}
         ports:
 {{- if (include "element-io.synapse.process.hasHttp" (dict "root" $ "context" $processType)) }}
