element web: additional as string

--- a/charts/matrix-stack/ci/fragments/element-web-pytest-extras.yaml
+++ b/charts/matrix-stack/ci/fragments/element-web-pytest-extras.yaml
@@ -14,7 +14,7 @@ elementWeb:
   annotations:
     has-no-service-monitor: "true"
 
-  additional:
+  additional: |
     {
       "default_server_config": {
         "m.homeserver": {
