--- a/charts/matrix-stack/values.yaml
+++ b/charts/matrix-stack/values.yaml
@@ -228,11 +228,11 @@ initSecrets:
 elementWeb:
   enabled: true
 
-  ## Arbitrary extra config to inject into Element Web's config.json a a YAML/JSON object
+  ## Arbitrary extra config to inject into Element Web's config.json a JSON string
   ##
   ## Full details on available configuration options can be found at https://github.com/element-hq/element-web/blob/develop/docs/config.md
   ## Most settings are configurable but some settings are owned by the chart and can't be overwritten
-  additional: {}
+  additional: "{}"
 
   # Number of Element Web replicas to start up
   replicas: 2
