--- a/charts/matrix-stack/ci/fragments/element-web-pytest-extras.yaml
+++ b/charts/matrix-stack/ci/fragments/element-web-pytest-extras.yaml
@@ -18,16 +18,17 @@ elementWeb:
     {
       "default_server_config": {
         "m.homeserver": {
-          "base_url": "https://synapse.{{ $.Values.serverName }}",
+          "base_url": "https://synapse.{{ $.Values.serverName }}"
         }
       },
-      "element_call":
-        {"url": "https://call.{{ $.Values.serverName }}", "use_exclusively": true},
-      "features":
-        {
-          "feature_video_rooms": true,
-          "feature_group_calls": true,
-          "feature_new_room_decoration_ui": true,
-          "feature_element_call_video_rooms": true,
-        },
+      "element_call": {
+        "url": "https://call.{{ $.Values.serverName }}",
+        "use_exclusively": true
+      },
+      "features": {
+        "feature_video_rooms": true,
+        "feature_group_calls": true,
+        "feature_new_room_decoration_ui": true,
+        "feature_element_call_video_rooms": true
+      }
     }
