postgres: fix initialization

--- a/charts/matrix-stack/templates/postgres/statefulset.yaml
+++ b/charts/matrix-stack/templates/postgres/statefulset.yaml
@@ -83,7 +83,7 @@ spec:
 {{- end }}
         - name: config
           mountPath: /docker-entrypoint-initdb.d/init-ess-dbs.sh
-          subPath: init-dbs.sh
+          subPath: configure-dbs.sh
         - name: database
           mountPath: /var/lib/postgres/data
         - name: temp
