ci pytest logs: get endpoints

--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -82,7 +82,7 @@ jobs:
         kind export logs --name ess-helm ./ess-helm-logs
         kind export kubeconfig --name ess-helm
         ns=$(kubectl --context kind-ess-helm get ns -l app.kubernetes.io/managed-by=pytest  -o jsonpath='{.items[].metadata.name}')
-        resources=("pods" "deployments" "statefulsets" "services" "configmaps" "secrets" "ingresses" "persistentvolumes" "persistentvolumeclaims")
+        resources=("pods" "deployments" "statefulsets" "services" "configmaps" "secrets" "ingresses" "persistentvolumes" "persistentvolumeclaims" "endpoints")
         for i in "${resources[@]}"; do
           kubectl --context kind-ess-helm get $i -n $ns > ./ess-helm-logs/$i.txt
           echo "----" >> ./ess-helm-logs/$i.txt
