Synapse: fix non-HTTP workers having a backup server-template in the HAProxy config

--- a/charts/matrix-stack/ci/pytest-synapse-values.yaml
+++ b/charts/matrix-stack/ci/pytest-synapse-values.yaml
@@ -35,8 +35,13 @@ synapse:
     annotations:
       has-no-service-monitor: "true"
   workers:
+    # A non-HTTP worker & a stream writer
+    event-persister:
+      enabled: true
+    # Media repo is fairly distinct from other workers
     media-repository:
       enabled: true
+    # A standard HTTP worker
     sliding-sync:
       enabled: true
 wellKnownDelegation:
