--- a/charts/matrix-stack/ci/fragments/synapse-pytest-self-extras.yaml
+++ b/charts/matrix-stack/ci/fragments/synapse-pytest-self-extras.yaml
@@ -17,7 +17,12 @@ synapse:
     value: "1"
 
   workers:
+    # A non-HTTP worker & a stream writer
+    event-persister:
+      enabled: true
+    # A standard HTTP worker
     sliding-sync:
       enabled: true
+    # Media repo is fairly distinct from other workers
     media-repository:
       enabled: true
