Synapse: add support for the push_rules stream writer

--- a/charts/matrix-stack/ci/fragments/synapse-all-workers-running.yaml
+++ b/charts/matrix-stack/ci/fragments/synapse-all-workers-running.yaml
@@ -27,6 +27,8 @@ synapse:
       enabled: true
     presence-writer:
       enabled: true
+    push-rules:
+      enabled: true
     pusher:
       enabled: true
       instances: 2
