--- a/charts/matrix-stack/ci/synapse-worker-example-values.yaml
+++ b/charts/matrix-stack/ci/synapse-worker-example-values.yaml
@@ -41,6 +41,8 @@ synapse:
       enabled: true
     presence-writer:
       enabled: true
+    push-rules:
+      enabled: true
     pusher:
       enabled: true
       instances: 2
