well-known delegation: allow to enforce a given redirect url

--- a/charts/matrix-stack/source/wellKnownDelegation.json
+++ b/charts/matrix-stack/source/wellKnownDelegation.json
@@ -12,6 +12,9 @@
     "labels": {
       "$ref": "file://common/labels.json"
     },
+    "baseDomainRedirectURL": {
+      "type": "string"
+    },
     "additional": {
       "type": "object",
       "properties": {
