well-known: give the possibility to disable baseDomainRedirect

--- a/charts/matrix-stack/source/wellKnownDelegation.json
+++ b/charts/matrix-stack/source/wellKnownDelegation.json
@@ -12,8 +12,16 @@
     "labels": {
       "$ref": "file://common/labels.json"
     },
-    "baseDomainRedirectURL": {
-      "type": "string"
+    "baseDomainRedirect": {
+      "type": "object",
+      "properties": {
+        "enabled": {
+          "type": "boolean"
+        },
+        "url": {
+          "type": "string"
+        }
+      }
     },
     "additional": {
       "type": "object",
