well-known: test redirects

--- a/charts/matrix-stack/ci/fragments/well-known-pytest-extras.yaml
+++ b/charts/matrix-stack/ci/fragments/well-known-pytest-extras.yaml
@@ -11,3 +11,5 @@ serverName: "{{ $.Values.global.baseDomain }}"
 wellKnownDelegation:
   ingress:
     tlsSecret: "{{ $.Release.Name }}-well-known-web-tls"
+  baseDomainRedirect:
+   url: "https://redirect.localhost/path"
