--- a/charts/matrix-stack/ci/pytest-well-known-values.yaml
+++ b/charts/matrix-stack/ci/pytest-well-known-values.yaml
@@ -16,6 +16,8 @@ serverName: "{{ $.Values.global.baseDomain }}"
 synapse:
   enabled: false
 wellKnownDelegation:
+  baseDomainRedirect:
+    url: "https://redirect.localhost/path"
   enabled: true
   ingress:
     tlsSecret: "{{ $.Release.Name }}-well-known-web-tls"
