add custom annotations to check config hook

--- a/charts/matrix-stack/ci/fragments/synapse-pytest-base-extras.yaml
+++ b/charts/matrix-stack/ci/fragments/synapse-pytest-base-extras.yaml
@@ -7,6 +7,10 @@ synapse:
     host: synapse.{{ $.Values.serverName }}
     tlsSecret: "{{ $.Release.Name }}-synapse-web-tls"
 
+  checkConfigHook:
+    annotations:
+      has-no-service-monitor: "true"
+
   redis:
     annotations:
       has-no-service-monitor: "true"
