--- a/charts/matrix-stack/templates/synapse/synapse_serviceaccount.yaml
+++ b/charts/matrix-stack/templates/synapse/synapse_serviceaccount.yaml
@@ -9,9 +9,9 @@ SPDX-License-Identifier: AGPL-3.0-only OR LicenseRef-Element-Commercial
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-{{- if or .serviceAccount.annotations .enableCheckConfigHook }}
+{{- if or .serviceAccount.annotations .checkConfigHook.enabled }}
   annotations:
-  {{- if .enableCheckConfigHook }}
+  {{- if .checkConfigHook.enabled }}
     "helm.sh/hook": pre-install,pre-upgrade
     "helm.sh/hook-delete-policy": before-hook-creation
   {{- end }}
